# hello_litellm

./: .env-lite-llm-proxy  pyproject.toml  start-proxy.sh  test-curl.sh
src/hello/: main-litellm-proxy.py  main-openai.py  main.py
